# win-automation-picker

./: .gitignore  404.html  README.en.md  README.ko.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-docs.txt  sitemap.xml
.github/workflows/: build-windows.yml  docs-pages.yml
ae-workbench/: index.html
daily-workflow/: index.html
device-control/: index.html
docs/: ae-workbench.md  daily-workflow.md  device-control.md  fixture-topology.md  getting-started.md  index.md  interface.md  troubleshooting.md  ux-readiness.md
docs/javascripts/: manual.js
docs/macro-builder/: basic-flow.md  block-designer.md  conditions-monitoring.md  data-rows.md  python-export.md
docs/operation/: automation-recording.md  direct-control-binary.md  dram-margin.md  fixture-info.md  index.md  monitoring-detail.md  multi-pc-operation.md  prepare.md  run-monitor.md  test-workflow.md
docs/reference/: buttons.md  config-files.md
docs/rig-ftp/: ae-campaign.md  dram-margin.md  execution-routes.md  master-setup.md  monitoring.md  overview.md  seq-integration.md  slave-setup.md
docs/setup/: admin-pc.md  config-files.md  connection-structure.md  fixture-pc.md  program-install.md  screen-guide.md  sk-commander.md
docs/stylesheets/: extra.css
docs/troubleshooting/: button-guide.md  communication.md  full-checklist.md  index.md  sk-commander.md  support-scope.md  test-execution.md
fixture-topology/: index.html
getting-started/: index.html
interface/: index.html
macro-builder/basic-flow/: index.html
macro-builder/block-designer/: index.html
macro-builder/conditions-monitoring/: index.html
macro-builder/data-rows/: index.html
macro-builder/python-export/: index.html
operation/: index.html
operation/automation-recording/: index.html
operation/direct-control-binary/: index.html
operation/dram-margin/: index.html
operation/fixture-info/: index.html
operation/monitoring-detail/: index.html
operation/multi-pc-operation/: index.html
reference/: device-field-reference-qdl.json
scripts/: build_windows_release.ps1  capture_manual_screenshots.py
search/: search_index.json
stylesheets/: extra.css
tests/: test_assets.py  test_automation.py  test_binary_exchange.py  test_block_tree.py  test_device_acceptance.py  test_exporter.py  test_firmware_plan.py  test_ftp_cli.py  test_ftp_spool.py  test_ftp_ui_helpers.py  test_inventory_csv.py  test_margin_bundle.py  test_margin_workflow.py  test_operator_language.py  test_operator_setup.py  test_project_file.py  test_recipe.py  test_recording.py  test_rig.py  test_rig_cli.py  test_run_artifacts.py  test_scratch_editor.py  test_selector.py  test_serial_console.py  test_startup_folder.py  test_topology.py  test_vendor_tool_contract.py  test_windows_compat.py  test_workbench.py  test_xlsx_export.py
troubleshooting/: index.html
ux-readiness/: index.html
(+67 files in other folders)
