[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "win-automation-picker"
version = "1.10.0"
description = "An AE workbench for Windows UI automation, SEQ handoff, and FTP rig orchestration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyserial>=3.5; platform_system == 'Windows'",
  "pywinauto>=0.6.8; platform_system == 'Windows'",
  "pynput>=1.7.6; platform_system == 'Windows'",
  "pyperclip>=1.8.2; platform_system == 'Windows'",
]

[project.scripts]
ae-workbench = "win_automation_picker.ae_workbench:main"
win-automation-picker = "win_automation_picker.__main__:main"
rig-commander = "win_automation_picker.rig_cli:main"
rig-ftp = "win_automation_picker.ftp_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
win_automation_picker = ["assets/*.ico", "assets/*.png"]

[tool.pytest.ini_options]
pythonpath = ["src"]
